# nnfs

./: README.md  p1.ipynb  p1.py  p3.py  pyproject.toml
src/: p1.sync.ipynb  p2.ipynb  p2.py  p2.sync.ipynb  p3.sync.ipynb  p3.sync.py
