[tool.poetry]
name = "nnfs"
version = "0.1.0"
description = "Following Sentex's NNFS book/video course"
authors = ["AndreasPB <andreas.p.brodersen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
jupyter-ascending = "^0.1.23"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
